--- a/CK.LogViewer.WebComponent/public/index.html
+++ b/CK.LogViewer.WebComponent/public/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TypeScript Web Component</title>
+  <base url="/public">
 </head>
 <body>
   <log-viewer></log-viewer>
-  <script src="node_modules/@webcomponents/custom-elements/src/native-shim.js"></script>
-  <script src="public/bundle.js"></script>
+  <!-- <script src="node_modules/@webcomponents/custom-elements/src/native-shim.js"></script> -->
+  <script src="bundle.js"></script>
 </body>
 </html>
