--- a/CK.LogViewer.WebComponent/public/index.html
+++ b/CK.LogViewer.WebComponent/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TypeScript Web Component</title>
   <base url="/public">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <log-viewer></log-viewer>
