--- a/CK.LogViewer.WebComponent/src/index.html
+++ b/CK.LogViewer.WebComponent/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,12 @@
   <base url="/public">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+  <upload-file></upload-file>
   <log-viewer></log-viewer>
   <script src="node_modules/@webcomponents/custom-elements/src/native-shim.js"></script>
   <script src="bundle.js"></script>
 </body>
+
 </html>
