--- a/CK.LogViewer.WebComponent/src/index.html
+++ b/CK.LogViewer.WebComponent/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <upload-file></upload-file>
   <log-viewer></log-viewer>
-  <script src="node_modules/@webcomponents/custom-elements/src/native-shim.js"></script>
+  <script src="native-shim.js"></script>
   <script src="bundle.js"></script>
 </body>
 
