Implemented cache busting on new version.

--- a/CK.LogViewer.WebComponent/src/index.html
+++ b/CK.LogViewer.WebComponent/src/index.html
@@ -8,14 +8,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TypeScript Web Component</title>
   <base url="/">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=$VERSION">
 </head>
 
 <body>
   <upload-file></upload-file>
   <log-viewer></log-viewer>
-  <script src="native-shim.js"></script>
-  <script src="bundle.js"></script>
+  <script src="native-shim.js?v=$VERSION"></script>
+  <script src="bundle.js?v=$VERSION"></script>
 </body>
 
 </html>
